<resources>
    <string name="app_name">Coffee App</string>
    <string name="toolbarTitle">Welcome</string>
    <string name="coffetitle">Cup-A-Coffee</string>
    <string name="about_us">About Us</string>
    <string name="about"><![CDATA[\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t About Us \n\n Taste and See Coffee Shop and Gallery offers a unique coffee house environment unlike any other in Macon. We are not only a place to drop in and get your morning cup of coffee (although you are more than welcome to do that), we are a place where you can sit down and enjoy that tailor-made cup of coffee. If you need to work, we have a seating area created specifically for you. If you need to rest, we have a soft-seating area in front of a stone fire place that is perfect for your weary mind and body. We offer a delicious variety of coffee roasted in house made by our professionally trained baristas. We have everything from classic coffee to our house made specialty beverages. All of our sauces & syrups are made in-house with all natural ingredients (no chemicals or preservatives) ensuring you the highest quality in taste & health. You can complete your coffee with one of our delicious sweet treats made by our very own baker. We look forward to serving you at Taste & See Coffee Shop and Gallery!\n\n]]></string>
    <string name="startButton">START ORDERING</string>
    <string name="toolbarOrder">Order</string>
    <string name="select_coffee">Select a Coffee</string>
    <string name="americano">Americano</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="latte">Latte</string>
    <string name="macchiato">Macchiato</string>
    <string name="select_size">Select a Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="options">Options</string>
    <string name="_2_shots">2 Shots</string>
    <string name="sugar">Sugar</string>
    <string name="cream">Cream</string>
    <string name="whole_milk">Whole Milk</string>
    <string name="milk">2% Milk</string>
    <string name="fat_milk">non Fat Milk</string>
    <string name="almond_milk">Almond Milk</string>
    <string name="continueBu">Continue</string>
    <string name="enter_pickup_info">Enter Pickup Info</string>
    <string name="place_order">Place Order</string>
    <string name="full_name">Full Name</string>
    <string name="name_hint">john snow</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_hint">444-444-4444</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="enter_payment_info">Enter Payment Info</string>
    <string name="card_type">Card Type</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="summary">Summary</string>
    <string name="order_summary">Order Summary</string>
    <string name="fullName">Full Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="pickupTime">Pickup Time</string>
    <string name="order">Order</string>

</resources>