<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/ShadesDark"
        android:title="@string/toolbarOrder"
        android:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="677dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ShadesLight"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/selectCoffee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/select_coffee"
                    android:textColor="@color/ShadesMedium"
                    android:textSize="35sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <RadioGroup
                    android:id="@+id/rdCoffeeType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/selectCoffee"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >


                    <RadioButton
                        android:id="@+id/rb_americano"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/radio_coffee_typse_selector"
                        android:button="@color/ShadesDark"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/americano"
                        android:textColor="@drawable/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_cappuccino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/radio_coffee_typse_selector"
                        android:button="@color/ShadesDark"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/cappuccino"
                        android:textColor="@drawable/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_latte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/radio_coffee_typse_selector"
                        android:button="@color/ShadesDark"
                        android:gravity="center"
                        android:paddingStart="40dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="40dp"
                        android:paddingBottom="10dp"
                        android:text="@string/latte"
                        android:textColor="@drawable/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_macchiato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/radio_coffee_typse_selector"
                        android:button="@color/ShadesDark"
                        android:gravity="center"
                        android:paddingStart="16dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="10dp"
                        android:text="@string/macchiato"
                        android:textColor="@drawable/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/drinkSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/selectSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/select_size"
                    android:textColor="@color/ShadesMedium"
                    android:textSize="35sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/rd_Size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/selectSize">

                    <RadioButton
                        android:id="@+id/smallSize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/small"
                        android:textColor="@color/ShadesMedium"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/mediumSize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/medium"
                        android:textColor="@color/ShadesMedium"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/largeSize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/large"
                        android:textColor="@color/ShadesMedium"
                        android:textSize="24sp" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/options"
                    android:textColor="@color/ShadesMedium"
                    android:textSize="35sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:checked="false"
                    android:text="@string/_2_shots"
                    android:textColor="@color/ShadesMedium"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_options"
                    tools:ignore="MissingConstraints" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:checked="false"
                    android:text="@string/sugar"
                    android:textColor="@color/ShadesMedium"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox1"
                    tools:ignore="MissingConstraints" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:checked="false"
                    android:text="@string/cream"
                    android:textColor="@color/ShadesMedium"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox2"
                    tools:ignore="MissingConstraints" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:checked="false"
                    android:text="@string/whole_milk"
                    android:textColor="@color/ShadesMedium"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox3"
                    tools:ignore="MissingConstraints" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:checked="false"
                    android:text="@string/milk"
                    android:textColor="@color/ShadesMedium"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox4"
                    tools:ignore="MissingConstraints" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:checked="false"
                    android:text="@string/fat_milk"
                    android:textColor="@color/ShadesMedium"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox5"
                    tools:ignore="MissingConstraints" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:checked="false"
                    android:text="@string/almond_milk"
                    android:textColor="@color/ShadesMedium"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox6"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/coffee_types_background"
                android:text="@string/continueBu"
                android:visibility="visible"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rb_latte"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
