<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ShadesLight"
    >

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/ShadesDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:title="@string/toolbarTitle"
        android:titleTextColor="@color/white"
        />

    <ImageView
        android:id="@+id/logoCompany"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/coffe_shop_logo_512x512"/>
    <TextView
        android:id="@+id/nameCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coffetitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoCompany"
        android:textSize="44sp"
        android:textColor="@color/ShadesDark" />

    <ScrollView
        android:id="@+id/srollabout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameCompany">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startButton"
        android:textColor="@color/white"
        android:background="@drawable/shape"
        android:textSize="24sp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@+id/srollabout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>