<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/ShadesDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:title="Pay"
        android:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ShadesLight"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">




                <TextView
                    android:id="@+id/tv_infoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:text="@string/enter_pickup_info"
                    android:textColor="@color/ShadesDark"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/full_name"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/ShadesDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_infoTitle" />

                <EditText
                    android:id="@+id/et_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_fullName" />

                <TextView
                    android:id="@+id/tv_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/phone_number"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/ShadesDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_fullName" />

                <EditText
                    android:id="@+id/et_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phoneNumber"
                    android:inputType="number"
                    android:hint="@string/phone_hint" />

                <TextView
                    android:id="@+id/tv_pickTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/pickup_time"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/ShadesDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_phoneNumber" />

                <TimePicker
                    android:id="@+id/tp_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pickTime" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PaymentScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_payInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/enter_payment_info"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="@color/ShadesDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_cardType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/card_type"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/ShadesDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_payInfo" />

                <Spinner
                    android:id="@+id/sp_payCard"
                    android:entries="@array/PaymentCard"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_cardType" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_cardNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/card_number"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/ShadesDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_cardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_cardNum" />

                <TextView
                    android:id="@+id/tv_cardEXP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/card_expiry"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/ShadesDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_cardNumber" />

                <EditText
                    android:id="@+id/et_cardNumMonth"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:inputType="number"
                    android:hint="mm"
                    android:layout_marginStart="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_cardEXP" />

                <TextView
                    android:id="@+id/slash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    app:layout_constraintStart_toEndOf="@id/et_cardNumMonth"
                    app:layout_constraintTop_toBottomOf="@+id/et_cardNumMonth"
                    app:layout_constraintTop_toTopOf="@+id/et_cardNumMonth" />

                <EditText
                    android:id="@+id/et_cardNumYear"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:inputType="number"
                    android:hint="yy"
                    app:layout_constraintStart_toEndOf="@+id/slash"
                    app:layout_constraintTop_toBottomOf="@+id/tv_cardEXP" />

                <EditText
                    android:id="@+id/et_cvvNum"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="numberPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_cardNumYear"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_placeOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="35dp"
                android:background="@drawable/coffee_types_background"
                android:clickable="false"
                android:text="@string/place_order"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
